--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@ node_modules
 
 # production
 /build
+*.code-workspace
+
+# design
+/design/*
 
 # misc
 .DS_Store
@@ -22,4 +26,3 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-*.code-workspace
